--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@fontsource/roboto": "5.1.0",
     "@mui/icons-material": "6.1.6",
     "@mui/material": "6.1.6",
+    "canvas-confetti": "1.9.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "15.6.1",
+    "zustand": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
